--- a/RAZOR/Pages/Shared/_Layout_2.cshtml
+++ b/RAZOR/Pages/Shared/_Layout_2.cshtml
@@ -29,7 +29,7 @@
                     <a class="nav-link text-white" asp-area="" asp-page="/Tareas_Concluidas">✅ Tareas concluidas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" asp-area="" asp-page="/Privacy">❌ Tareas canceladas</a>
+                    <a class="nav-link text-white" asp-area="" asp-page="/Tareas_Canceladas">❌ Tareas canceladas</a>
                 </li>
                 <li class="nav-item"> 
                     <a class="nav-link text-white" asp-area="" asp-page="/Privacy">🔒 Privacidad</a> 
